...
                                                    <rect key="frame" x="16" y="0.0" width="324" height="43.5"/>
                                                    <autoresizingMask key="autoresizingMask"/>
                                                    <accessibility key="accessibilityConfiguration" label="ViewControllerCell"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                    <nil key="textColor"/>
...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Home" id="sjw-Di-zaU"/>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="RBe-9Q-382" userLabel="First Responder" sceneMemberID="firstResponder"/>
...
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="LoginButtonIdentifier" label="LoginButton"/>
                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                <state key="normal" title="Login">
...
                                <rect key="frame" x="91" y="117" width="192" height="27"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" label="ViewControllerScreenLabel"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
...
                                <rect key="frame" x="109" y="167" width="163" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="UserNameFieldIdentifier" label="UserNameFieldLabel"/>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                <rect key="frame" x="109" y="232" width="163" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="PasswordFieldIdentifier" label="PasswordFieldLabel"/>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                <rect key="frame" x="97" y="131" width="233" height="32"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="LoggedInIdentifier" label="LoggedInLabel"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
...
